# story-architect

./: .env.example  .gitignore  README.md  config.yaml  main.py  requirements.txt
agents/: agent_10_video_dialogue.py  agent_1_screenplay.py  agent_2_scene_breakdown.py  agent_3_shot_breakdown.py  agent_4_grouping.py  agent_5_character.py  (+4 more)
backend/: .env.example  Dockerfile  config.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/agents/: __init__.py  agent_10_video_dialogue.py  agent_11_video_edit.py  agent_1_screenplay.py  agent_2_scene_breakdown.py  agent_3_shot_breakdown.py  agent_4_grouping.py  agent_5_character.py  agent_6_parent_generator.py  agent_7_parent_verification.py  agent_8_child_generator.py  agent_9_child_verification.py  base_agent.py  factory.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  files.py  pipeline.py  queue.py  sessions.py
backend/app/core/: config.py  gemini_client.py  pipeline.py  progress_tracker.py  queue_manager.py
backend/app/models/: __init__.py  agent_output.py  queue_task.py  session.py
backend/app/schemas/: agent.py  pipeline.py  progress.py  queue.py  session.py  validators.py
backend/app/utils/: __init__.py  audio_analyzer.py  fal_helper.py  ffmpeg_builder.py  image_utils.py  vertex_veo_helper.py
backend/prompts/: agent_10_prompt.txt  agent_1_prompt.txt  agent_2_prompt.txt  agent_3_prompt.txt  agent_4_prompt.txt  agent_7_prompt_modifier.txt  agent_8_prompt.txt  agent_9_prompt_modifier.txt  agent_9_verification_prompt.txt
core/: config.py  (+6 more)
(+46 files in other folders)
